# spnbox

./: CMakeLists.txt  main.c  sss.h
inc/: config.h  helper.h  sbox.h  spnbox.h  tableMng.h  types.h
inc/spn/: spn16.h  spn24.h  spn32.h  spn8.h
inc/tables/: 8bit.h  tables.h
src/: helper.c  sbox.c  spnbox.c  tableMng.c
src/spn/: spn16.c  spn24.c  spn32.c  spn8.c
